# amescii

./: .gitignore  Cargo.toml  README.md  lessons.md
crates/wm-core/: Cargo.toml
crates/wm-core/src/: geo.rs  grid.rs  lib.rs  model.rs  places.rs
crates/wm-core/src/agg/: mod.rs  outlier.rs  weight.rs
crates/wm-core/src/render/: braille.rs  colormap.rs  lines.rs  mod.rs
crates/wm-esp32/: Cargo.toml
crates/wm-esp32/src/: main.rs
crates/wm-sources/: Cargo.toml
crates/wm-sources/examples/: mvt_probe.rs
crates/wm-sources/src/: basemap.rs  cache.rs  error.rs  lib.rs  radar.rs  traits.rs
crates/wm-sources/src/providers/: jma.rs  mod.rs  open_meteo.rs  owm.rs
crates/wm-tui/: Cargo.toml
crates/wm-tui/examples/: smoke.rs
crates/wm-tui/src/: app.rs  config.rs  input.rs  main.rs
crates/wm-tui/src/ui/: legend.rs  map.rs  mod.rs  sidebar.rs  timeline.rs
docs/: AGGREGATION.md  CLAUDE_CODE_TASKS.md  DEEP_ZOOM.md  DESIGN.md  LABELS_AND_TOGGLE.md  MAP_AND_TIMELINE.md  OPTIMIZATION.md  PORTABILITY.md
