[package]
name = "wm-tui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Ratatui terminal UI: Braille map with truecolor rain radar + multi-source weather sidebar."

[[bin]]
name = "weathermap"
path = "src/main.rs"

[dependencies]
wm-core = { workspace = true }
wm-sources = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["std", "derive"] }
toml = "0.8"
directories = "5"
# valid_unix(u64 UTC秒) → ローカル HH:MM 整形。時刻整形は std 層(wm-tui)の責務。
chrono = { version = "0.4", default-features = false, features = ["clock"] }
# 日本語地名ラベルの端末表示幅（全角=2）算出。間引きレイアウトに使う。
unicode-width = "0.1"
